--- a/css/styles.css
+++ b/css/styles.css
@@ -926,6 +926,7 @@ background: linear-gradient(to bottom, #ef473a, #cb2d3e);
   color: #fafafa;
 }
 
+
 .card__body h4 {
   font-size: 1.5rem;
   text-transform: capitalize;
@@ -1455,7 +1456,8 @@ background: #02a2c4;
 	background-color: #2657a7;
 }
 .media-body a{
-	color: #FFFFFF;
+	font-size: 16px;
+	color: #2657a7;
 }
 .footer .footer-col {
 	margin-bottom: 2.25rem;
