--- a/css/pages.css
+++ b/css/pages.css
@@ -16,7 +16,6 @@ html {
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
-  background: #fff;
   color: #999;
 }
 
@@ -152,5 +151,779 @@ h3 {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     flex-direction: column;
+  }
+}
+
+/* KONTAK */
+.show-cart li {
+  display: flex;
+}
+.card {
+  margin-bottom: 20px;
+}
+.card-img-top {
+  width: 200px;
+  height: 200px;
+  align-self: center;
+}
+
+/* PRODUK HUKUM */
+.download-putih{
+  color: #ffffff;
+  text-decoration: none;
+}
+
+/* BULLETIN */
+@import url('https://fonts.googleapis.com/css?family=Rubik:300,400,700&display=swap');
+
+
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+
+
+.row {
+  max-width: 960px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.heading {
+    margin-bottom: 1em;
+}
+
+.figure {
+  background: #1d1d1d;
+  display: inline-block;
+  margin: 10px;
+  max-width: 280px;
+  min-width: 230px;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+
+.figure * {
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
+
+
+
+/* Section 1 - Hover Effect #01 */
+
+.section-1 .figure:before,
+.section-1 .figure:after {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+  background-color: #1d1d1d;
+  border-left: 3px solid #ffffff;
+  border-right: 3px solid #ffffff;
+  content: '';
+  opacity: 0.9;
+  z-index: 1;
+}
+
+.section-1 .figure:before {
+  -webkit-transform: skew(45deg) translateX(-180%);
+  transform: skew(45deg) translateX(-180%);
+}
+
+.section-1 .figure:after {
+  -webkit-transform: skew(45deg) translate(180%);
+  transform: skew(45deg) translateX(180%);
+}
+
+.section-1 .figure img {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  max-width: 100%;
+  vertical-align: top;
+}
+
+.section-1 .figure figcaption {
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    z-index: 2;
+    -webkit-transform: translate(-50%,-50%) scale(0.5);
+    transform: translate(-50%, -50%) scale(0.5);
+    opacity: 0;
+    -webkit-box-shadow: 0 0 10px #1d1d1d;
+    box-shadow: 0 0 10px #1d1d1d;
+}
+
+.section-1 .figure h3 {
+  background-color: #1d1d1d;
+  border: 2px solid #ffffff;
+  color: #ffffff;
+  font-size: 1em; 
+  font-weight: 600;
+  letter-spacing: 1px;
+  margin: 0;
+  padding: 5px 10px;
+  text-transform: uppercase;
+}
+
+.section-1 .figure a {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 3;
+}
+
+.section-1 .figure:hover > img,
+.section-1 .figure:hover > img {
+  opacity: 0.5;
+}
+
+.section-1 .figure:hover:before,
+.section-1 .figure.hover:before {
+  -webkit-transform: skew(45deg) translateX(-80%);
+  transform: skew(45deg) translateX(-80%);
+}
+
+.section-1 .figure:hover:after,
+.section-1 .figure.hover:after {
+  -webkit-transform: skew(45deg) translateX(80%);
+  transform: skew(45deg) translateX(80%);
+}
+
+.section-1 figure:hover figcaption,
+.section-1 figure.hover figcaption {
+  -webkit-transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+}
+
+/* Section 2 - Hover Effect #02 */
+
+section.section-2 {
+  background: #1d1d1d;
+  color: #efefef;
+}
+
+.section-2 .figure {
+  background: #ffffff;
+  color: #1d1d1d;
+}
+
+.section-2 .figure img {
+  vertical-align: top;
+  max-width: 100%;
+  backface-visibility: hidden;
+}
+
+.section-2 .figure figcaption {
+  position: absolute;
+  background-color: #efefef;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  padding: 5px 20px;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  line-height: 1.1em; /* 1.1em */
+  overflow: hidden;
+  height: 44px;
+  width: 150px;
+}
+
+.section-2 .figure h3 {
+  text-transform: uppercase;
+  font-size: 0.9em;
+  margin: 0;
+  letter-spacing: 2px;
+}
+
+.section-2 .figure h3.hover {
+  color: #efefef;
+  font-weight: 700;
+}
+
+.section-2 .figure a {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.section-2 .figure .title {
+  transform: translatey(50%);
+}
+.section-2 .figure .hover {
+  transform: translatey(50%);  
+}
+
+.section-2 .figure:hover > img,
+.section-2 .figure.hover > img {
+  opacity: 0;
+}
+
+.section-2 .figure:hover figcaption,
+.section-2 .figure.hover figcaption {
+  background-color: #1d1d1d;
+}
+
+.section-2 .figure:hover .title,
+.section-2 .figure.hover .title {
+  -webkit-transform: translateY(-150%);
+  transform: translateY(-150%);
+}
+
+.section-2 .figure:hover .hover, 
+.section-2 .figure.hover .hover {
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+/* Section 3 - Hovering Effect #03 */
+
+.section-3 .figure {
+  background-color: #1d1d1d;
+  color: #efefef;
+}
+
+.section-3 .figure img {
+  max-width: 100%;
+  vertical-align: top;
+}
+
+.section-3 .figure figcaption {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,0.8) 0%, transparent 100%);
+  background-image: linear-gradient(bottom, rgba(0,0,0,0.8) 0%, transparent 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  text-align: left;
+  padding: 0 0px 10px 15px;
+}
+
+.section-3 .figure h3 {
+  font-size: 44px;
+  font-weight: 400;
+  line-height: 1;
+  letter-spacing: 1px;
+  margin: 3px 0;
+}
+
+.section-3 .figure .title1,
+.section-3 .figure .title3 {
+  font-weight: 300;
+  font-size: 25px;
+}
+
+.section-3 .figure .title2 {
+  color: #a58e7c;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.section-3 .figure a {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.section-3 .figure:hover img,
+.section-3 .figure.hover img {
+  -webkit-transform: scale(1.3) rotate(-3deg);
+  transform: scale(1.3) rotate(-3deg);
+}
+
+/* Section 4 - Hover Effect #04 */
+
+.section-4 {
+  background: #1d1d1d;
+  color: #efefef;
+}
+
+.section-4 .figure {
+  background: #efefef;
+  text-align: center;
+  box-shadow: 0 0 5px rgba(0,0,0,0.15);
+}
+
+.section-4 .figure img {
+  vertical-align: top;
+  max-width: 100%;
+}
+
+.section-4 .figure div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: table;
+  padding: 0 20px;
+  -webkit-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+}
+
+.section-4 .figure div:before,
+.section-4 .figure div:after {
+  position: absolute;
+  display: block;
+  width: 0%;
+  height: 100%;
+  content: '';
+  background-color: rgba(29,29,29,0.5);
+  opacity: 0.8;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-tranisition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+
+.section-4 .figure div:before {
+  right: -150%;
+}
+
+.section-4 .figure div:after {
+  left: -150%;
+}
+
+.section-4 .figure h3 {
+  color: #1d1d1d;
+  text-transform: uppercase;
+  font-weight: 400;
+  margin: 0;
+  opacity: 0;
+}
+
+.section-4 .figure h3 span {
+  font-weight: 700;
+  display: block;
+}
+
+.section-4 .figure a {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+}
+
+.section-4 .figure:hover img,
+.section-4 .figure.hover img {
+  opacity: 0.3;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+
+.section-4 .figure:hover h3,
+.section-4 .figure.hover h3 {
+  opacity: 1;
+}
+
+.section-4 .figure:hover div,
+.section-4 .figure.hover div {
+  opacity: 1;
+}
+
+.section-4 .figure:hover div:before,
+.section-4 .figure.hover div:before,
+.section-4 .figure:hover div:after,
+.section-4 .figure.hover div:after {
+  width: 150%;
+}
+
+/* Section 5 - Hover Effect #05 */
+
+.section-5 .figure {
+  height: 418px;
+}
+
+.section-5 .figure img {
+  max-width: 100%;
+  position: relative;
+  opacity: 0.7;
+}
+
+.section-5 .figure figcaption {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  left: 13%;
+  right: 13%;
+  border: 1px solid rgba(239,239,239,0.8);
+  border-width: 0 1px;
+  background-color: rgba(29,29,29,0.2);
+  color: #efefef;
+/*   width: 220px; */
+}
+
+.section-5 .figure h2 {
+  padding: 15px 20px;
+  margin: 0;
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: -1px;
+}
+
+.section-5 .figure h2 span {
+  font-weight: 800;
+}
+
+.section-5 .figure .icon,
+.section-5 .figure .caption {
+  overflow: hidden;
+  width: 100%;
+  position: absolute;
+}
+
+.section-5 .figure .icon {
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  top: 0;
+}
+
+.section-5 .figure .caption {
+  -webkit-transform: translateY(50%);
+  transform: translateY(50%);
+  bottom: 0;
+}
+
+.section-5 .figure p,
+.section-5 .figure .icon span {
+  display: table;
+  margin: 0 auto;
+  padding: 0 10px;
+  position: relative;
+  text-align: center;
+  width: auto;
+  color: rgba(239,239,239,0);
+  font-size: 0.8em;
+}
+
+.section-5 .figure p:before,
+.section-5 .figure .icon span:before,
+.section-5 .figure p:after,
+.section-5 .figure .icon span:after {
+  position: absolute;
+  height: 1px;
+  content: '';
+  background: #fff;
+  -webkit-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+
+.section-5 .figure .icon span:before,
+.section-5 .figure .icon span:after {
+  width: 1000%;
+  top: 50%;
+}
+
+.section-5 .figure .icon span:before {
+  left: -1000%;
+}
+
+.section-5 .figure .icon span:after {
+  right: -1000%;
+}
+
+.section-5 ion-icon {
+  color: #efefef;
+  font-size: 30px;
+}
+
+.section-5 .figure p:before,
+.section-5 .figure p:after {
+  width: 150%;
+  bottom: 50%;
+}
+
+.section-5 .figure p:before {
+  left: -100%;
+}
+
+.section-5 .figure p:after {
+  right: -100%;
+}
+
+.section-5 .figure a {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  z-index: 1;
+}
+
+.section-5 .figure:hover img,
+.section-5 .figure.hover img {
+  opacity: 0.15;
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.section-5 .figure:hover p,
+.section-5 .figure.hover p {
+  opacity: 1;
+  -webkit-transition-delay: 0.35s;
+  transition-delay: 0.35s;
+  color: #efefef;
+}
+
+.section-5 .figure:hover p:before,
+.section-5 .figure.hover p:before {
+  left: -150%;
+}
+
+.section-5 .figure:hover p:after,
+.section-5 .figure.hover p:after{
+  right: -150%;
+}
+
+/* Section 6 - Hover Effect 6 */
+
+.section-6 {
+  background: #1d1d1d;
+  color: #efefef;
+}
+
+.section-6 .figure {
+  text-align: left;
+  background: #1d1d1d;
+  font-size: 16px;
+}
+
+.section-6 .figure img {
+  position: relative;
+  max-width: 100%;
+  vertical-align: top;
+}
+
+.section-6 figcaption {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  padding: 20px 30px;
+}
+
+.section-6 .figure figcaption:before,
+.section-6 .figure figcaption:after {
+  width: 1px;
+  height: 0;
+}
+
+.section-6 .figure figcaption:before {
+  right: 0;
+  top: 0;
+}
+
+.section-6 .figure figcaption:after {
+  left: 0;
+  bottom: 0;
+}
+
+.section-6 .figure h3,
+.section-6 .figure p {
+  line-height: 1.5em;
+}
+
+.section-6 .figure h3 {
+  margin: 0 0 5px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.section-6 .figure p {
+  font-size: 0.8em;
+  font-weight: 400;
+  margin: 0 0 15px;
+}
+
+.section-6 .figure a {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.section-6 .figure:before,
+.section-6 .figure:after,
+.section-6 .figure figcaption:before,
+.section-6 .figure figcaption:after {
+  position: absolute;
+  content: '';
+  background-color: #efefef;
+  z-index: 1;
+  -webkit-transition: all 0.35s ease-in;
+  transition: all 0.35s ease-in;
+  opacity: 0.8;
+}
+
+.section-6 .figure:before,
+.section-6 .figure:after {
+  height: 1px;
+  width: 0%;
+}
+
+.section-6 .figure:before {
+  top: 0;
+  left: 0;
+}
+
+.section-6 .figure:after {
+  bottom: 0;
+  right: 0;
+}
+
+.section-6 .figure:hover img,
+.section-6 .figure.hover img {
+  opacity: 0.4;
+}
+
+.section-6 .figure:hover figcaption:before,
+.section-6 .figure.hover figcaption:before,
+.section-6 .figure:hover figcaption:after,
+.section-6 .figure.hover figcaption:after {
+  height: 100%;
+}
+
+.section-6 .figure:hover figcaption {
+  opacity: 1;
+}
+
+.section-6 .figure:hover:before,
+.section-6 .figure.hover:before,
+.section-6 .figure:hover:after,
+.section-6 .figure.hover:after {
+  width: 100%;
+}
+
+.section-6 .figure:hover:before,
+.section-6 .figure.hover:before,
+.section-6 .figure:hover:after,
+.section-6 .figure.hover:after,
+.section-6 .figure:hover figcaption:before,
+.section-6 .figure.hover figcaption:before,
+.section-6 .figure:hover figcaption:after,
+.section-6 .figure.hover figcaption:after {
+  opacity: 0.1;
+}
+
+/* Footer */
+
+footer.footer {
+  text-align: center;
+  color: #efefef;
+  background: #1d1d1d;
+  font-size: 0.8em;
+  padding-bottom: 1.5em;
+  font-style: italic;
+}
+
+
+/* Gallery */
+
+.container.gallery-container {
+  background-color: #fff;
+  color: #35373a;
+  min-height: 100vh;
+  padding: 30px 50px;
+}
+
+.gallery-container h1 {
+  text-align: center;
+  margin-top: 50px;
+  font-family: 'Droid Sans', sans-serif;
+  font-weight: bold;
+}
+
+.gallery-container p.page-description {
+  text-align: center;
+  margin: 25px auto;
+  font-size: 18px;
+  color: #999;
+}
+
+.tz-gallery {
+  padding: 40px;
+}
+
+/* Override bootstrap column paddings */
+.tz-gallery .row > div {
+  padding: 2px;
+}
+
+.tz-gallery .lightbox img {
+  width: 100%;
+  border-radius: 0;
+  position: relative;
+}
+
+.tz-gallery .lightbox:before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -13px;
+  margin-left: -13px;
+  opacity: 0;
+  color: #fff;
+  font-size: 26px;
+  font-family: 'Glyphicons Halflings';
+  content: '\e003';
+  pointer-events: none;
+  z-index: 9000;
+  transition: 0.4s;
+}
+
+
+.tz-gallery .lightbox:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-color: rgba(46, 132, 206, 0.7);
+  content: '';
+  transition: 0.4s;
+}
+
+.tz-gallery .lightbox:hover:after,
+.tz-gallery .lightbox:hover:before {
+  opacity: 1;
+}
+
+.baguetteBox-button {
+  background-color: transparent !important;
+}
+
+@media(max-width: 768px) {
+  body {
+      padding: 0;
   }
 }
